--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.13.1",
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "pug": "^3.0.2",
     "dotenv": "^16.1.4",
-    "mongoose": "^8.6.3"
+    "express": "^4.18.2",
+    "mongoose": "^8.6.3",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   },
-  "devDependencies": {},
   "type": "commonjs"
 }
